src/objects/Engagement__c.object
<CustomObject>
    <description>This is status information for each of the MSTR Cloud engagements.</description>
    <fields>
        <fullName>AWS_Infrastructure__c</fullName>
        <label>AWS Infrastructure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Analyst__c</fullName>
        <description>This is the number of Analyst licenses per the customer contract</description>
        <inlineHelpText>Enter the number of Analyst licenses per the customer contract</inlineHelpText>
        <label>Analyst</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Architect__c</fullName>
        <description>This is the number of Architect licenses per the customer contract</description>
        <inlineHelpText>Enter the number of Architect licenses per the customer contract</inlineHelpText>
        <label>Architect</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloud_Customer__c</fullName>
        <label>Cloud Customer</label>
        <referenceTo>Cloud_Customer__c</referenceTo>
        <relationshipName>Engagements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cloud_Old_Engt_ID__c</fullName>
        <description>This is old cloud engagement ID (sys ID) from pro SFDC for migration to Ent SFDC</description>
        <inlineHelpText>This is old cloud engagement ID (sys ID) from pro SFDC for migration to Ent SFDC</inlineHelpText>
        <label>Cloud Old Engt ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Support_Model__c</fullName>
        <description>Select the level of Cloud Support Model the customer has purchased.</description>
        <inlineHelpText>Select the level of Cloud Support Model the customer has purchased.</inlineHelpText>
        <label>Cloud Support Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Standard</fullName>
                </value>
                <value>
                    <fullName>Cloud Plus</fullName>
                </value>
                <value>
                    <fullName>Cloud Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>This field tracks general comments on status of the engagement.</description>
        <inlineHelpText>Enter general comments on status of the engagement.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <description>This is the number of consumer licenses per the customer contract</description>
        <inlineHelpText>Enter the number of consumer licenses per the customer contract</inlineHelpText>
        <label>Consumer</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <description>This date tracks the date when the customer&apos;s cloud service agreement will expire.</description>
        <inlineHelpText>Enter the date when the customer&apos;s cloud service agreement will expire.</inlineHelpText>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_WH_Size_TB__c</fullName>
        <label>Contract WH Size (TB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Contract_Sign_Date__c</fullName>
        <description>This field tracks the date the customer signed the contract</description>
        <inlineHelpText>Enter the customer Contract Sign Date</inlineHelpText>
        <label>Customer Contract Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desktop_Designer__c</fullName>
        <description>This is the number of Desktop Designer licenses per the customer contract</description>
        <inlineHelpText>Enter the number of Desktop Designer licenses per the customer contract</inlineHelpText>
        <label>Desktop Designer</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Connect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this is a direct connect environment</description>
        <label>Direct Connect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_Services_PEP__c</fullName>
        <description>This value indicates whether the customer purchased any Perpetual Education Passes (PEP) as part of their contract.</description>
        <inlineHelpText>Enter a value if the customer purchased any Perpetual Education Passes (PEP) as part of their contract.</inlineHelpText>
        <label>Education Services (PEP)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the engagement manager assigned to the account</description>
        <inlineHelpText>Enter the engagement manager assigned to the account</inlineHelpText>
        <label>Engagement Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagement_Status__c</fullName>
        <description>This is the project status for the customer environment. Production customers are those that have their production environment pointing to a MicroStrategy metadata with reporting objects in it. Customers with a single node will always be marked as production. Quick-strike projects are single node environments provisioned for a limited time.</description>
        <inlineHelpText>This is the project status for the customer environment. Production customers are those that have their production environment pointing to a MicroStrategy metadata with reporting objects in it. Customers with a single node will always be marked as prod.</inlineHelpText>
        <label>Engagement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upcoming</fullName>
                </value>
                <value>
                    <fullName>Environment Buildout In Progress</fullName>
                    <default>true</default>
                    <label>Environment Buildout In Progress</label>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Off-Boarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Upcharge__c</fullName>
        <label>Estimated Upcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hosting_Location__c</fullName>
        <description>This is the Hosting Location where the customer environment should be created</description>
        <inlineHelpText>Enter the Hosting Location where the customer environment should be created</inlineHelpText>
        <label>Hosting Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ashburn, VA 3.0</fullName>
                    <default>true</default>
                    <label>Ashburn, VA 3.0</label>
                </value>
                <value>
                    <fullName>Ashburn, VA 1.0</fullName>
                </value>
                <value>
                    <fullName>AWS Dublin</fullName>
                </value>
                <value>
                    <fullName>AWS Frankfurt</fullName>
                </value>
                <value>
                    <fullName>AWS Northern California</fullName>
                </value>
                <value>
                    <fullName>AWS North Virginia</fullName>
                </value>
                <value>
                    <fullName>AWS Oregon</fullName>
                </value>
                <value>
                    <fullName>AWS Sao Paulo</fullName>
                </value>
                <value>
                    <fullName>AWS Singapore</fullName>
                </value>
                <value>
                    <fullName>AWS Sydney</fullName>
                </value>
                <value>
                    <fullName>London, England 1.0</fullName>
                </value>
                <value>
                    <fullName>Seattle, WA 3.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Filtering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether the customer has requested IP filtering for their environment</description>
        <inlineHelpText>Check this field if the customer has requested IP filtering for their environment</inlineHelpText>
        <label>IP Filtering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Memory_Analytics_GB__c</fullName>
        <label>In Memory Analytics (GB)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intro_Period__c</fullName>
        <description>This field tracks the number of months offered to the customer as an intro period</description>
        <inlineHelpText>Enter the number of months (if any) offered to the customer as an intro period</inlineHelpText>
        <label>Intro Period (Months)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSTR_Contract_Sign_Date__c</fullName>
        <description>This field tracks the date MicroStrategy signed the contact</description>
        <inlineHelpText>Enter the date MSTR signed the contract</inlineHelpText>
        <label>MSTR Contract Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mobile_Option_Seats__c</fullName>
        <description>This field tracks the number of Mobile Option seats purchased</description>
        <inlineHelpText>This field tracks the number of Mobile Option seats purchased</inlineHelpText>
        <label>Mobile Option Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer purchased mobile option or had the option grandfathered in.</description>
        <inlineHelpText>Customer purchased mobile option or had the option grandfathered in.</inlineHelpText>
        <label>Mobile Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Enter any relevant notes for this customer engagement</description>
        <inlineHelpText>Enter any relevant notes for this customer engagement</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Off_board_Date__c</fullName>
        <description>This field tracks the Off-boarding date for the customer environment</description>
        <inlineHelpText>Enter the Off-boarding date for the customer environment</inlineHelpText>
        <label>Off-board Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Hosting__c</fullName>
        <label>Other Hosting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pro__c</fullName>
        <description>This is the number of Pro licenses per the customer contract</description>
        <inlineHelpText>Enter the number of Pro licenses per the customer contract</inlineHelpText>
        <label>Pro</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Professional_Services__c</fullName>
        <label>Professional Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party</fullName>
                </value>
                <value>
                    <fullName>MSTR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quickstrike__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this box if this is a Quickstrike engagement</inlineHelpText>
        <label>Quickstrike</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box indicates whether the customer bought the R integration option</description>
        <inlineHelpText>Check if customer purchased R the integration option</inlineHelpText>
        <label>R Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box indicates whether the customer bought the SDK component</description>
        <inlineHelpText>Check this box if the customer bought the SDK component</inlineHelpText>
        <label>SDK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SES__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SES</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this box if the SLA applies to this customer</inlineHelpText>
        <label>SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Model__c</fullName>
        <description>This field captures whether this customer will have a Named User license or an unlimited user Capacity Model subscription.</description>
        <inlineHelpText>Please select whether this customer will have a Named User license or an unlimited user Capacity Model subscription.</inlineHelpText>
        <label>Subscription Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Named User</fullName>
                </value>
                <value>
                    <fullName>Capacity</fullName>
                </value>
                <value>
                    <fullName>VBI 25</fullName>
                </value>
                <value>
                    <fullName>VBI 50</fullName>
                </value>
                <value>
                    <fullName>VBI 100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Liaisons__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field tracks whether we have support liasions for this Engagement.</description>
        <inlineHelpText>Check this box if we have support liasions for this Engagement.</inlineHelpText>
        <label>Support Liaisons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field tracks whether there have been defined main contacts for this engagement.</description>
        <inlineHelpText>Check this box if there have been defined main contacts for this engagement.</inlineHelpText>
        <label>Technical Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_BI_Users__c</fullName>
        <description>This is the total number of users, based on adding up Consumer, Analyst, Pro, Architect and Desktop Designer</description>
        <formula>Consumer__c + Analyst__c + Pro__c + Architect__c + Desktop_Designer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a calculated field showing the total number of users, based on adding up Consumer, Analyst, Pro, Architect and Desktop Designer</inlineHelpText>
        <label>Total BI Users</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Txn_Srv_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer purchased Transaction Services option or had the option grandfathered in.</description>
        <inlineHelpText>Customer purchased Transaction Services option or had the option grandfathered in.</inlineHelpText>
        <label>Txn Srv. Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Txn_Svc_Seats__c</fullName>
        <description>This field tracks the number of Transaction Services Option seats purchased</description>
        <inlineHelpText>This field tracks the number of Transaction Services Option seats purchased</inlineHelpText>
        <label>Txn Svc Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPN__c</fullName>
        <label>VPN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, &quot;View&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WH_Users__c</fullName>
        <description>This is the number of WH users per the customer contract</description>
        <inlineHelpText>Enter the number of WH users per the customer contract</inlineHelpText>
        <label>WH Users</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order_Submission_Date__c</fullName>
        <description>This field tracks the date when the Work Order was submitted to operations</description>
        <inlineHelpText>Enter the date when the Work Order was submitted to operations</inlineHelpText>
        <label>Work Order Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Professional_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party Professional Services</label>
        <type>Checkbox</type>
    </fields>
    <label>Cloud Configuration</label>
    <listViews>
        <fullName>All_Active_Engagements</fullName>
        <columns>View__c</columns>
        <columns>Cloud_Customer__c</columns>
        <columns>Engagement_Manager__c</columns>
        <columns>Engagement_Status__c</columns>
        <columns>Hosting_Location__c</columns>
        <columns>Subscription_Model__c</columns>
        <columns>Contract_Expiration_Date__c</columns>
        <columns>Direct_Connect__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Engagement_Status__c</field>
            <operation>equals</operation>
            <value>Upcoming,Environment Buildout In Progress,Development,Production</value>
        </filters>
        <label>All Active Configurations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Engagements</fullName>
        <columns>View__c</columns>
        <columns>Cloud_Customer__c</columns>
        <columns>Customer_Contract_Sign_Date__c</columns>
        <columns>Engagement_Manager__c</columns>
        <columns>Engagement_Status__c</columns>
        <columns>Hosting_Location__c</columns>
        <columns>Subscription_Model__c</columns>
        <columns>Contract_Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Configurations</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Cloud Configuration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cloud Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>